<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewClassement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textViewClassement"
            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:background="#f1f1f1">

            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudoTitre"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_marginHorizontal="1dp"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScoreTitre"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textViewPseudo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudo1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:id="@+id/textViewScore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScore1"
                    android:background="#ffffff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewPseudo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudo1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:id="@+id/textViewScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScore1"
                    android:background="#ffffff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewPseudo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudo1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:id="@+id/textViewScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScore1"
                    android:background="#ffffff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewPseudo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudo1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:id="@+id/textViewScore4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScore1"
                    android:background="#ffffff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewPseudo5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewPseudo1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:id="@+id/textViewScore5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewScore1"
                    android:background="#ffffff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>